--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,18 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      ค้นหา
+        ค้นหารายชื่อนักศึกษา
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+    <form (ngSubmit)="searchData()">
+      <ion-item>
+        <ion-label floating>ใส่รหัสนักศึกษา</ion-label>
+        <ion-input type="text" name="nameStudent" [(ngModel)]="nameStudent" required ></ion-input>
+      </ion-item>
+      <br/>
+      <button ion-button type="submit" block>ค้นหา</button>
+    </form>
 </ion-content>
