--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -7,11 +7,6 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-list-header>Follow us on Twitter</ion-list-header>
-    <ion-item>
-      <ion-icon name="ionic" item-start></ion-icon>
-      @ionicframework
-    </ion-item>
-  </ion-list>
+    <button ion-button block (click)="addRoom()" > เพิ่มรายการห้อง</button>
+    <button ion-button block color="secondary" (click)="addStuden()" > เพิ่มรายชื่อนักศึกษา</button>
 </ion-content>
