สร้างหน้าหลัก home

--- a/src/pages/addstuden/addstuden.html
+++ b/src/pages/addstuden/addstuden.html
@@ -9,7 +9,7 @@
 
       <ion-item>
         <ion-label floating>รหัสนักศึกษา</ion-label>
-        <ion-input type="number" name="idStuden" [(ngModel)]="data.idStuden" required ></ion-input>
+        <ion-input type="number" name="IDstuden" [(ngModel)]="data.IDstuden" required ></ion-input>
       </ion-item>
 
       <ion-item>
