--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,36 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>รายชื่อ</ion-title>
+    <ion-title>รายชื่อห้อง</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="addData()">
+        <ion-icon name="add-circle"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+
+  <h3>รายชื่อห้อง</h3>
+  <ion-list>
+    <ion-item-sliding *ngFor="let room of dataRoom; let i=index">
+      <ion-item nopadding>
+        <p>
+          {{room.nameRoom}}
+        </p>
+        <button ion-button clear item-end  (click)="viewRoom(room.IDroom)" >View</button>
+      </ion-item>
+
+      <ion-item-options side="left"> <!-- เมื่อเราสไลด์ไปทางขวา -->
+        <button ion-button color="primary" (click)="editData(room.IDroom)">
+          <ion-icon name="paper"></ion-icon>
+        </button>
+        <button ion-button color="danger" (click)="deleteData(room.IDroom)">
+          <ion-icon name="trash"></ion-icon>
+        </button>
+      </ion-item-options>
+
+    </ion-item-sliding>
+  </ion-list>
+
 </ion-content>
