--- a/src/pages/student/student.html
+++ b/src/pages/student/student.html
@@ -1,9 +1,35 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>student</ion-title>
+    <ion-title>รายชื่อนักศึกษา</ion-title>
+    <button ion-button icon-only (click)="addData()">
+        <ion-icon name="add-circle"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+
+  <h3>รายชื่อนักศึกษา</h3>
+  <ion-list>
+    <ion-item-sliding *ngFor="let student of dataStudent; let i=index">
+      <ion-item nopadding>
+        <p>
+          {{student.name}}
+        </p>
+        <button ion-button clear item-end  (click)="viewDetail(student.IDstudent)" >View</button>
+      </ion-item>
+
+      <ion-item-options side="left"> <!-- เมื่อเราสไลด์ไปทางขวา -->
+        <button ion-button color="primary" (click)="editData(student.IDstudent)">
+          <ion-icon name="paper"></ion-icon>
+        </button>
+        <button ion-button color="danger" (click)="deleteData(student.IDstudent)">
+          <ion-icon name="trash"></ion-icon>
+        </button>
+      </ion-item-options>
+
+    </ion-item-sliding>
+  </ion-list>
 
 </ion-content>
