--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,7 +21,7 @@
         <button ion-button clear item-end  (click)="viewRoom(room.IDroom)" >View</button>
       </ion-item>
 
-      <ion-item-options side="left"> <!-- เมื่อเราสไลด์ไปทางขวา -->
+      <ion-item-options side="right"> <!-- เมื่อเราสไลด์ไปทางขวา -->
         <button ion-button color="primary" (click)="editData(room.IDroom)">
           <ion-icon name="paper"></ion-icon>
         </button>
