--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -10,7 +10,7 @@
     <form (ngSubmit)="searchData()">
       <ion-item>
         <ion-label floating>ใส่รหัสนักศึกษา</ion-label>
-        <ion-input type="text" name="nameStudent" [(ngModel)]="nameStudent" required ></ion-input>
+        <ion-input type="text" name="IDstudent" [(ngModel)]="IDstudent" required ></ion-input>
       </ion-item>
       <br/>
       <button ion-button type="submit" block>ค้นหา</button>
