--- a/src/pages/detailstudent/detailstudent.html
+++ b/src/pages/detailstudent/detailstudent.html
@@ -8,7 +8,7 @@
 
   <ion-card>
     <ion-card-header>
-      IDstudent: {{detailstudent[0].IDstudent}} <br>
+      IDstudent: {{detailstudent.IDstudent}} <br>
       Name: {{detailstudent.name}} <br>
     </ion-card-header>
     <ion-card-content>
