--- a/src/pages/editroom/editroom.html
+++ b/src/pages/editroom/editroom.html
@@ -1,15 +1,16 @@
-<!--
-  Generated template for the EditroomPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
-    <ion-title>editroom</ion-title>
+    <ion-title>แก้ไขรายละเอียดห้อง</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+    <form (ngSubmit)="updateData()">
+      <ion-item>
+        <ion-label floating>ใส่ชื่อห้องเรียน</ion-label>
+        <ion-input type="text" name="nameRoom" [(ngModel)]="nameRoom" required ></ion-input>
+      </ion-item>
+      <br/>
+      <button ion-button type="submit" block>บันทึกข้อมูล</button>
+    </form>
 </ion-content>
