--- a/src/pages/editstudent/editstudent.html
+++ b/src/pages/editstudent/editstudent.html
@@ -1,15 +1,33 @@
-<!--
-  Generated template for the EditstudentPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
-    <ion-title>editstudent</ion-title>
+    <ion-title>แก้ไขรายละเอียดนักศึกษา</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+    <form (ngSubmit)="updateData()">
 
+      <ion-item>
+        <ion-label floating>รหัสนักศึกษา</ion-label>
+        <ion-input type="number" name="IDstuden" [(ngModel)]="data.IDstudent" required ></ion-input>
+      </ion-item>
+
+      <ion-item>
+         <ion-label floating>ชื่อ-สกุล นักศึกษา</ion-label>
+         <ion-input type="text" name="name" [(ngModel)]="data.name" required ></ion-input>
+      </ion-item>
+
+      <ion-item>
+          <ion-label floating>เบอร์โทรศัพท์</ion-label>
+          <ion-input type="number" name="tel" [(ngModel)]="data.tel" required ></ion-input>
+      </ion-item>
+
+      <ion-item>
+          <ion-label floating>ที่อยู่</ion-label>
+          <ion-input type="text" name="address" [(ngModel)]="data.address" required ></ion-input>
+      </ion-item>
+  
+      <br/>
+      <button ion-button type="submit" block>บันทึกข้อมูล</button>
+    </form>
 </ion-content>
